--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -2,7 +2,8 @@ version: '3'
 
 env:
   MAIN_FILE: cmd/main/main.go
-  SCRIPT_FILE: scripts/main/main.go
+  UTIL_SCRIPT_FILE: scripts/util/main/main.go
+  MOCKGEN_TEST_SCRIPT_FILE: scripts/mockgen_test/main/main.go
   DEV_CFG_FILE: config/dev.yaml
 
 tasks:
@@ -11,7 +12,7 @@ tasks:
       - go build $MAIN_FILE
   script:
     cmds:
-      - go build $SCRIPT_FILE
+      - go build $UTIL_SCRIPT_FILE
       - ./main
       - rm main
   dev:
@@ -20,3 +21,8 @@ tasks:
   client:
     cmds:
       - go run client/main.go
+  mockgen-test:
+    cmds:
+      - go build $MOCKGEN_TEST_SCRIPT_FILE
+      - ./main
+      - rm main
